[project]
name = "fdlite"
version = "0.7.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["numpy>=2.1.3", "pillow>=11.2.1", "tensorflow>=2.19.0"]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
